# fmi-get-temp

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  foo
config/: config.json  vaasa.json
src/: config.rs  lib.rs  web_util.rs
