# Cargo.toml

[package]
name = "fmi_get_temp"
version = "1.3.3"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "FMI get temperature reading"
repository = "https://github.com/sjm42/fmi-get-temp"
readme = "README.md"
keywords = ["fmi", "temperature"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
coap = { version = "0.18", default-features = false }
chrono = "0"
chrono-tz = "0"
reqwest = { version = "0", features = [
    "brotli",
    "deflate",
    "gzip",
    "json",
    "rustls-tls",
    "trust-dns",
], default-features = false }
roxmltree = "0"
rumqttc = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"
url = "2"


[build-dependencies]
build-data = "0"


[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"


[profile.minsize]
inherits = "release"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

# EOF
