# Cargo.toml

[package]
name = "fmi_get_temp"
version = "1.4.7"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "FMI get temperature reading"
repository = "https://github.com/sjm42/fmi-get-temp"
readme = "README.md"
keywords = ["fmi", "temperature"]
license = "MIT OR Apache-2.0"
edition = "2024"
resolver = "2"


[dependencies]
# NOTE (brotli 8.0.3 build break): alloc-stdlib 0.2.3 / brotli-decompressor 5.0.2
# allow alloc-no-stdlib 3.0.0 via a `>=2.0.4, <4` range, but brotli itself pins
# 2.0.x; mixing the two versions fails to compile. There is NO Cargo.toml-only
# fix: a `=2.0.4` pin here only adds a parallel node, while brotli-decompressor
# still resolves 3.0.0 across the major boundary (Cargo won't unify majors).
# The only working fix is a Cargo.lock pin that forces a single shared version:
#     cargo update -p alloc-no-stdlib@3.0.0 --precise 2.0.4
# A plain `cargo update` undoes it, so re-run that command after updating until
# brotli fixes this upstream.

anyhow = "1"
clap = { version = "4", features = ["derive"] }
coap = { version = "0.26", default-features = false }
chrono = "0"
reqwest = { version = "0.13", default-features = false, features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls",
    "hickory-dns",
] }
roxmltree = "0"
rumqttc = "0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"
url = "2"


[build-dependencies]
anyhow = "1"
build-data = "0"


[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"


[profile.minsize]
inherits = "release"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

# EOF
